// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLayout component tests open with PageSidebar closed 1`] = `
<PageLayout
  BrandAltText="Kogito logo"
  BrandClick={[MockFunction]}
  BrandSrc="../../../../static/kogito.png"
  PageNav={
    <React.Fragment>
      page Navigation elements
    </React.Fragment>
  }
  pageNavOpen={false}
  withHeader={true}
>
  <Page
    className="kogito-consoles-common--PageLayout"
    data-ouia-component-type="page"
    data-ouia-safe={true}
    defaultManagedSidebarIsOpen={true}
    getBreakpoint={[Function]}
    getVerticalBreakpoint={[Function]}
    header={
      <PageHeader
        data-ouia-header="true"
        headerTools={
          <PageHeaderTools>
            <Context.Provider
              value={
                Object {
                  "altText": "Kogito logo",
                  "imageSrc": "../../../../static/kogito.png",
                }
              }
            >
              <MockedPageToolbar />
            </Context.Provider>
          </PageHeaderTools>
        }
        isNavOpen={false}
        logo={
          <Brand
            alt="Kogito logo"
            onClick={[MockFunction]}
            src="../../../../static/kogito.png"
          />
        }
        onNavToggle={[Function]}
        showNavToggle={true}
      />
    }
    isBreadcrumbWidthLimited={false}
    isManagedSidebar={false}
    isNotificationDrawerExpanded={false}
    mainContainerId="main-content-page-layout-default-nav"
    mainTabIndex={-1}
    onNotificationDrawerExpand={[Function]}
    onPageResize={[Function]}
    sidebar={
      <PageSidebar
        data-ouia-navigation="true"
        isNavOpen={false}
        nav={
          <React.Fragment>
            page Navigation elements
          </React.Fragment>
        }
        theme="dark"
      />
    }
  >
    <div
      className="pf-c-page pf-m-resize-observer pf-m-breakpoint-default pf-m-height-breakpoint-sm kogito-consoles-common--PageLayout"
      data-ouia-component-type="page"
      data-ouia-safe={true}
    >
      <PageHeader
        data-ouia-header="true"
        headerTools={
          <PageHeaderTools>
            <Context.Provider
              value={
                Object {
                  "altText": "Kogito logo",
                  "imageSrc": "../../../../static/kogito.png",
                }
              }
            >
              <MockedPageToolbar />
            </Context.Provider>
          </PageHeaderTools>
        }
        isNavOpen={false}
        logo={
          <Brand
            alt="Kogito logo"
            onClick={[MockFunction]}
            src="../../../../static/kogito.png"
          />
        }
        onNavToggle={[Function]}
        showNavToggle={true}
      >
        <header
          className="pf-c-page__header"
          data-ouia-header="true"
        >
          <div
            className="pf-c-page__header-brand"
          >
            <div
              className="pf-c-page__header-brand-toggle"
            >
              <Button
                aria-controls={null}
                aria-expanded="false"
                aria-label="Global navigation"
                id="nav-toggle"
                onClick={[Function]}
                variant="plain"
              >
                <ButtonBase
                  aria-controls={null}
                  aria-expanded="false"
                  aria-label="Global navigation"
                  id="nav-toggle"
                  innerRef={null}
                  onClick={[Function]}
                  variant="plain"
                >
                  <button
                    aria-controls={null}
                    aria-disabled={false}
                    aria-expanded="false"
                    aria-label="Global navigation"
                    className="pf-c-button pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-Button-plain-2"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe={true}
                    disabled={false}
                    id="nav-toggle"
                    onClick={[Function]}
                    role={null}
                    type="button"
                  >
                    <BarsIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 448 512"
                        width="1em"
                      >
                        <path
                          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                        />
                      </svg>
                    </BarsIcon>
                  </button>
                </ButtonBase>
              </Button>
            </div>
            <a
              className="pf-c-page__header-brand-link"
            >
              <Brand
                alt="Kogito logo"
                onClick={[MockFunction]}
                src="../../../../static/kogito.png"
              >
                <img
                  alt="Kogito logo"
                  className="pf-c-brand"
                  onClick={[MockFunction]}
                  src="../../../../static/kogito.png"
                />
              </Brand>
            </a>
          </div>
          <PageHeaderTools>
            <div
              className="pf-c-page__header-tools"
            >
              <MockedPageToolbar />
            </div>
          </PageHeaderTools>
        </header>
      </PageHeader>
      <PageSidebar
        data-ouia-navigation="true"
        isNavOpen={false}
        nav={
          <React.Fragment>
            page Navigation elements
          </React.Fragment>
        }
        theme="dark"
      >
        <div
          aria-hidden={true}
          className="pf-c-page__sidebar pf-m-collapsed"
          data-ouia-navigation="true"
          id="page-sidebar"
        >
          <div
            className="pf-c-page__sidebar-body"
          >
            page Navigation elements
          </div>
        </div>
      </PageSidebar>
      <main
        className="pf-c-page__main"
        id="main-content-page-layout-default-nav"
        tabIndex={-1}
      >
        children rendered
      </main>
    </div>
  </Page>
</PageLayout>
`;

exports[`PageLayout component tests open with PageSidebar closed 2`] = `
<PageLayout
  BrandAltText="Kogito logo"
  BrandClick={[MockFunction]}
  BrandSrc="../../../../static/kogito.png"
  PageNav={
    <React.Fragment>
      page Navigation elements
    </React.Fragment>
  }
  pageNavOpen={false}
  withHeader={true}
>
  <Page
    className="kogito-consoles-common--PageLayout"
    data-ouia-component-type="page"
    data-ouia-safe={true}
    defaultManagedSidebarIsOpen={true}
    getBreakpoint={[Function]}
    getVerticalBreakpoint={[Function]}
    header={
      <PageHeader
        data-ouia-header="true"
        headerTools={
          <PageHeaderTools>
            <Context.Provider
              value={
                Object {
                  "altText": "Kogito logo",
                  "imageSrc": "../../../../static/kogito.png",
                }
              }
            >
              <MockedPageToolbar />
            </Context.Provider>
          </PageHeaderTools>
        }
        isNavOpen={true}
        logo={
          <Brand
            alt="Kogito logo"
            onClick={[MockFunction]}
            src="../../../../static/kogito.png"
          />
        }
        onNavToggle={[Function]}
        showNavToggle={true}
      />
    }
    isBreadcrumbWidthLimited={false}
    isManagedSidebar={false}
    isNotificationDrawerExpanded={false}
    mainContainerId="main-content-page-layout-default-nav"
    mainTabIndex={-1}
    onNotificationDrawerExpand={[Function]}
    onPageResize={[Function]}
    sidebar={
      <PageSidebar
        data-ouia-navigation="true"
        isNavOpen={true}
        nav={
          <React.Fragment>
            page Navigation elements
          </React.Fragment>
        }
        theme="dark"
      />
    }
  >
    <div
      className="pf-c-page pf-m-resize-observer pf-m-breakpoint-default pf-m-height-breakpoint-sm kogito-consoles-common--PageLayout"
      data-ouia-component-type="page"
      data-ouia-safe={true}
    >
      <PageHeader
        data-ouia-header="true"
        headerTools={
          <PageHeaderTools>
            <Context.Provider
              value={
                Object {
                  "altText": "Kogito logo",
                  "imageSrc": "../../../../static/kogito.png",
                }
              }
            >
              <MockedPageToolbar />
            </Context.Provider>
          </PageHeaderTools>
        }
        isNavOpen={true}
        logo={
          <Brand
            alt="Kogito logo"
            onClick={[MockFunction]}
            src="../../../../static/kogito.png"
          />
        }
        onNavToggle={[Function]}
        showNavToggle={true}
      >
        <header
          className="pf-c-page__header"
          data-ouia-header="true"
        >
          <div
            className="pf-c-page__header-brand"
          >
            <div
              className="pf-c-page__header-brand-toggle"
            >
              <Button
                aria-controls={null}
                aria-expanded="true"
                aria-label="Global navigation"
                id="nav-toggle"
                onClick={[Function]}
                variant="plain"
              >
                <ButtonBase
                  aria-controls={null}
                  aria-expanded="true"
                  aria-label="Global navigation"
                  id="nav-toggle"
                  innerRef={null}
                  onClick={[Function]}
                  variant="plain"
                >
                  <button
                    aria-controls={null}
                    aria-disabled={false}
                    aria-expanded="true"
                    aria-label="Global navigation"
                    className="pf-c-button pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-Button-plain-2"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe={true}
                    disabled={false}
                    id="nav-toggle"
                    onClick={[Function]}
                    role={null}
                    type="button"
                  >
                    <BarsIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 448 512"
                        width="1em"
                      >
                        <path
                          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                        />
                      </svg>
                    </BarsIcon>
                  </button>
                </ButtonBase>
              </Button>
            </div>
            <a
              className="pf-c-page__header-brand-link"
            >
              <Brand
                alt="Kogito logo"
                onClick={[MockFunction]}
                src="../../../../static/kogito.png"
              >
                <img
                  alt="Kogito logo"
                  className="pf-c-brand"
                  onClick={[MockFunction]}
                  src="../../../../static/kogito.png"
                />
              </Brand>
            </a>
          </div>
          <PageHeaderTools>
            <div
              className="pf-c-page__header-tools"
            >
              <MockedPageToolbar />
            </div>
          </PageHeaderTools>
        </header>
      </PageHeader>
      <PageSidebar
        data-ouia-navigation="true"
        isNavOpen={true}
        nav={
          <React.Fragment>
            page Navigation elements
          </React.Fragment>
        }
        theme="dark"
      >
        <div
          aria-hidden={false}
          className="pf-c-page__sidebar pf-m-expanded"
          data-ouia-navigation="true"
          id="page-sidebar"
        >
          <div
            className="pf-c-page__sidebar-body"
          >
            page Navigation elements
          </div>
        </div>
      </PageSidebar>
      <main
        className="pf-c-page__main"
        id="main-content-page-layout-default-nav"
        tabIndex={-1}
      >
        children rendered
      </main>
    </div>
  </Page>
</PageLayout>
`;

exports[`PageLayout component tests snapshot tests 1`] = `
<PageLayout
  BrandAltText="Kogito logo"
  BrandClick={[MockFunction]}
  BrandSrc="../../../../static/kogito.png"
  PageNav={
    <React.Fragment>
      page Navigation elements
    </React.Fragment>
  }
  withHeader={true}
>
  <Page
    className="kogito-consoles-common--PageLayout"
    data-ouia-component-type="page"
    data-ouia-safe={true}
    defaultManagedSidebarIsOpen={true}
    getBreakpoint={[Function]}
    getVerticalBreakpoint={[Function]}
    header={
      <PageHeader
        data-ouia-header="true"
        headerTools={
          <PageHeaderTools>
            <Context.Provider
              value={
                Object {
                  "altText": "Kogito logo",
                  "imageSrc": "../../../../static/kogito.png",
                }
              }
            >
              <MockedPageToolbar />
            </Context.Provider>
          </PageHeaderTools>
        }
        isNavOpen={true}
        logo={
          <Brand
            alt="Kogito logo"
            onClick={[MockFunction]}
            src="../../../../static/kogito.png"
          />
        }
        onNavToggle={[Function]}
        showNavToggle={true}
      />
    }
    isBreadcrumbWidthLimited={false}
    isManagedSidebar={false}
    isNotificationDrawerExpanded={false}
    mainContainerId="main-content-page-layout-default-nav"
    mainTabIndex={-1}
    onNotificationDrawerExpand={[Function]}
    onPageResize={[Function]}
    sidebar={
      <PageSidebar
        data-ouia-navigation="true"
        isNavOpen={true}
        nav={
          <React.Fragment>
            page Navigation elements
          </React.Fragment>
        }
        theme="dark"
      />
    }
  >
    <div
      className="pf-c-page pf-m-resize-observer pf-m-breakpoint-default pf-m-height-breakpoint-sm kogito-consoles-common--PageLayout"
      data-ouia-component-type="page"
      data-ouia-safe={true}
    >
      <PageHeader
        data-ouia-header="true"
        headerTools={
          <PageHeaderTools>
            <Context.Provider
              value={
                Object {
                  "altText": "Kogito logo",
                  "imageSrc": "../../../../static/kogito.png",
                }
              }
            >
              <MockedPageToolbar />
            </Context.Provider>
          </PageHeaderTools>
        }
        isNavOpen={true}
        logo={
          <Brand
            alt="Kogito logo"
            onClick={[MockFunction]}
            src="../../../../static/kogito.png"
          />
        }
        onNavToggle={[Function]}
        showNavToggle={true}
      >
        <header
          className="pf-c-page__header"
          data-ouia-header="true"
        >
          <div
            className="pf-c-page__header-brand"
          >
            <div
              className="pf-c-page__header-brand-toggle"
            >
              <Button
                aria-controls={null}
                aria-expanded="true"
                aria-label="Global navigation"
                id="nav-toggle"
                onClick={[Function]}
                variant="plain"
              >
                <ButtonBase
                  aria-controls={null}
                  aria-expanded="true"
                  aria-label="Global navigation"
                  id="nav-toggle"
                  innerRef={null}
                  onClick={[Function]}
                  variant="plain"
                >
                  <button
                    aria-controls={null}
                    aria-disabled={false}
                    aria-expanded="true"
                    aria-label="Global navigation"
                    className="pf-c-button pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-Button-plain-1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe={true}
                    disabled={false}
                    id="nav-toggle"
                    onClick={[Function]}
                    role={null}
                    type="button"
                  >
                    <BarsIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 448 512"
                        width="1em"
                      >
                        <path
                          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                        />
                      </svg>
                    </BarsIcon>
                  </button>
                </ButtonBase>
              </Button>
            </div>
            <a
              className="pf-c-page__header-brand-link"
            >
              <Brand
                alt="Kogito logo"
                onClick={[MockFunction]}
                src="../../../../static/kogito.png"
              >
                <img
                  alt="Kogito logo"
                  className="pf-c-brand"
                  onClick={[MockFunction]}
                  src="../../../../static/kogito.png"
                />
              </Brand>
            </a>
          </div>
          <PageHeaderTools>
            <div
              className="pf-c-page__header-tools"
            >
              <MockedPageToolbar />
            </div>
          </PageHeaderTools>
        </header>
      </PageHeader>
      <PageSidebar
        data-ouia-navigation="true"
        isNavOpen={true}
        nav={
          <React.Fragment>
            page Navigation elements
          </React.Fragment>
        }
        theme="dark"
      >
        <div
          aria-hidden={false}
          className="pf-c-page__sidebar pf-m-expanded"
          data-ouia-navigation="true"
          id="page-sidebar"
        >
          <div
            className="pf-c-page__sidebar-body"
          >
            page Navigation elements
          </div>
        </div>
      </PageSidebar>
      <main
        className="pf-c-page__main"
        id="main-content-page-layout-default-nav"
        tabIndex={-1}
      >
        children rendered
      </main>
    </div>
  </Page>
</PageLayout>
`;
